@@ -19,6 +19,7 @@ Version 1.3.2
 - fixed compilation with wxWidgets >= 2.5.3
 - fixed Find to search in all plural forms instead of only the first one
 - added "whole words only" option to Find tool (Olivier Sannier)
+- added default parsers for more programming languages supported by xgettext
 - added more translations:
      Korean (Hojin Choi)
      Hebrew (Nir Lavi)
